--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start-dev":"nodemon app.js"
+    "start-dev": "nodemon app.js"
   },
   "author": "sg",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chalk": "^2.4.1",
     "express": "^4.16.3",
     "express-promise-router": "^3.0.3",
     "joi": "^13.6.0",
+    "mongoose": "^5.2.13",
     "morgan": "^1.9.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "pino": "^5.5.0"
   }
 }
