--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "mongoose": "^5.2.13",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.4",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pino": "^5.5.0"
   }
 }
