[api_auth] Add local and jwt middlewares for signin, signup and secret

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "sg",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "express": "^4.16.3",
