--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-promise-router": "^3.0.3",
     "joi": "^13.6.0",
@@ -20,6 +21,7 @@
     "morgan": "^1.9.0",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
+    "passport-facebook-token": "^3.3.0",
     "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
